# BHM

./: .gitignore  ACKNOWLEDGE.txt  CMakeLists.txt  COPYRIGHT.TXT  FindCheck.cmake  FindGSL.cmake  INSTALL.md  README.md  basic.cpp  basic.hpp  codecemetery.txt  generator.param  in.param  main.cpp  note  sampling.kdev4
.kdev4/: sampling.kdev4
iniparser/: CMakeLists.txt  README.md
src/: CMakeLists.txt  basic.cpp  basic.hpp  bhm_spline.py  generator.cpp  grid.hpp  histogram.cpp  histogram.hpp  iniparser_frontend.hpp  logger.hpp  main.cpp  matrix.cpp  matrix.hpp  poly.cpp  poly.hpp  print_spline_grid.cpp  print_spline_grid.hpp  slot.cpp  slot.hpp  spline.cpp  spline.hpp
tests/: CMakeLists.txt  basic_test.cpp  basic_unittest.cpp  bhm_spline.py  bootstrap2_test.cpp  bootstrap_test.cpp  divergence_test.cpp  error_test.cpp  fft_test.cpp  generator.cpp  generator.param  grid_test.cpp  histogram_test.cpp  histogram_unittest.cpp  iniparser.cpp  jackknife_test.cpp  logger.cpp  main1d_test.cpp  matrix_test.cpp  matrix_test_individualspline.cpp  matrix_unittest.cpp  mock_polaronDiagMC.cpp  pbc_test.cpp  poly_test.cpp  read_histogram.cpp  sample.param  signproblem_norm_test.cpp  signproblem_test.cpp  simple_test.cpp  slot_test.cpp  slot_unittest.cpp  spline_unittest.cpp  threshold_test.cpp  timeevolution_test.cpp  twopeaks_test.cpp  utilities.cpp
utilities/: add_copyright.py
